<resources>
    <string name="app_name" translatable="false">Sa2ration 2026</string>

    <string name="photo_by">Photo credit</string>
    <string name="photo_by_desc">Photo taken by Vik Vik; uploaded to <![CDATA[<a href="https://www.wesaturate.com/photo/bfxImVCM">Wesaturate</a>]]></string>
    <string name="enable_dci">Enable Color Management</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="save">Save</string>
    <string name="hue_level">Hue level</string>
    <string name="contrast_level">Contrast level</string>
    <string name="color_management">sRGB color management</string>
    <string name="saturation_level">Saturation level</string>
    <string name="values_are_saved">Values are saved</string>
    <string name="warning_no_root">Root access was not detected. App will exit now.</string>
    <string name="ok">Ok</string>
    <string name="autostart">Autostart</string>
    <string name="autostart_explanation">(Re-)Apply after every first login</string>
</resources>
