<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBg">
    <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
                android:id="@+id/ll_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">
            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textStyle="bold"
                    android:text="Preview"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp"/>

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:clickable="true"
                    android:elevation="16dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:srcCompat="@drawable/test_img"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/stuff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:padding="8dp">

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturation_level"
                    android:textSize="16sp"/>

            <LinearLayout
                    android:id="@+id/slider_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <SeekBar
                        android:id="@+id/seekBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="200"
                        android:progress="100"/>

                <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1.00"
                        android:textAlignment="textEnd"/>
            </LinearLayout>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:visibility="gone"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color_management"
                    android:textSize="16sp"
                    android:visibility="gone"/>

            <Switch
                    android:id="@+id/dci"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="16dp"
                    android:text="@string/enable_dci"
                    android:textSize="14sp"
                    android:visibility="gone"/>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/autostart"
                    android:textSize="16sp"/>

            <Switch
                    android:id="@+id/autostart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:text="@string/autostart_explanation"
                    android:checked="true"
                    android:textSize="14sp"/>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp"/>

            <LinearLayout
                    android:id="@+id/buttons_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <Space
                        android:layout_width="0dp"
                        android:layout_weight="0"
                        android:layout_height="match_parent"/>

                <Button
                        android:id="@+id/reset_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset"/>

                <Space
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"/>

                <Button
                        android:id="@+id/apply_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apply"
                        android:enabled="false"/>
                <Space
                        android:layout_width="0dp"
                        android:layout_weight="0"
                        android:layout_height="match_parent"/>

                <Button
                        android:id="@+id/save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"/>

                <Space
                        android:layout_width="0dp"
                        android:layout_weight="0"
                        android:layout_height="match_parent"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>